// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketDashboard should match the snapshot 1`] = `
<main>
  <Connect(CardContainer)
    dataKey="tickets"
  />
</main>
`;

exports[`TicketDashboard should match the snapshot if location is assets 1`] = `
<main>
  <Connect(CardContainer)
    dataKey="assets"
  />
</main>
`;
